name:          tables
category:      Data, Lenses
version:       0.4
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/tables/
bug-reports:   http://github.com/ekmett/tables/issues
copyright:     Copyright (C) 2012-2013 Edward A. Kmett
synopsis:      In-memory storage with multiple keys using lenses and traversals
description:
  In-memory storage with multiple keys using lenses and traversals
  .
  For a quick tour, see <https://github.com/ekmett/tables#examples>

build-type:    Custom
tested-with:   GHC == 7.4.2
extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/config
  travis/cabal-apt-install
  examples/*.hs
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/tables.git

flag test-properties
  description: Enable the properties test-suite.
  default: True
  manual: True

flag transformers2
  description: Enables the use of old versions of transformers. Users should
               never care about this.
  default: False
  manual: False

library
  build-depends:
    base                 >= 4.3 && < 5,
    binary               >= 0.5 && < 0.8,
    cereal               >= 0.3 && < 0.4,
    comonad              >= 4   && < 5,
    containers           >= 0.4 && < 0.6,
    deepseq              >= 1.3 && < 1.4,
    hashable             >= 1.1 && < 1.3,
    lens                 >= 4   && < 5,
    profunctors          >= 4   && < 5,
    safecopy             >= 0.6.3 && < 0.9,
    template-haskell     >= 2.7 && < 2.9,
    transformers         >= 0.2 && < 0.4,
    transformers-compat  >= 0.1 && < 1,
    unordered-containers == 0.2.*

  exposed-modules:
    Data.Table

  if impl(ghc>=7.2)
    other-extensions: Trustworthy
    cpp-options: -DDEFAULT_SIGNATURES=1

  ghc-options: -Wall -fwarn-tabs -O2 -fdicts-cheap -funbox-strict-fields
  hs-source-dirs: src

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
    base,
    containers,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath,
    lens,
    transformers,
    unordered-containers
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
